; ModuleID = '/home/carl/AnghaBench/linux/arch/arm/mach-orion5x/extr_pci.c_pcie_rd_conf.c'
source_filename = "/home/carl/AnghaBench/linux/arch/arm/mach-orion5x/extr_pci.c_pcie_rd_conf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_bus = type { i32 }

@PCIBIOS_DEVICE_NOT_FOUND = common dso_local global i32 0, align 4
@orion5x_pcie_lock = common dso_local global i32 0, align 4
@PCIE_BASE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pci_bus*, i32, i32, i32, i32*)* @pcie_rd_conf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pcie_rd_conf(%struct.pci_bus* %0, i32 %1, i32 %2, i32 %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.pci_bus*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i64, align 8
  %13 = alloca i32, align 4
  store %struct.pci_bus* %0, %struct.pci_bus** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32* %4, i32** %11, align 8
  %14 = load %struct.pci_bus*, %struct.pci_bus** %7, align 8
  %15 = getelementptr inbounds %struct.pci_bus, %struct.pci_bus* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* %8, align 4
  %18 = call i32 @PCI_SLOT(i32 %17)
  %19 = call i64 @pcie_valid_config(i32 %16, i32 %18)
  %20 = icmp eq i64 %19, 0
  br i1 %20, label %21, label %24

21:                                               ; preds = %5
  %22 = load i32*, i32** %11, align 8
  store i32 -1, i32* %22, align 4
  %23 = load i32, i32* @PCIBIOS_DEVICE_NOT_FOUND, align 4
  store i32 %23, i32* %6, align 4
  br label %37

24:                                               ; preds = %5
  %25 = load i64, i64* %12, align 8
  %26 = call i32 @spin_lock_irqsave(i32* @orion5x_pcie_lock, i64 %25)
  %27 = load i32, i32* @PCIE_BASE, align 4
  %28 = load %struct.pci_bus*, %struct.pci_bus** %7, align 8
  %29 = load i32, i32* %8, align 4
  %30 = load i32, i32* %9, align 4
  %31 = load i32, i32* %10, align 4
  %32 = load i32*, i32** %11, align 8
  %33 = call i32 @orion_pcie_rd_conf(i32 %27, %struct.pci_bus* %28, i32 %29, i32 %30, i32 %31, i32* %32)
  store i32 %33, i32* %13, align 4
  %34 = load i64, i64* %12, align 8
  %35 = call i32 @spin_unlock_irqrestore(i32* @orion5x_pcie_lock, i64 %34)
  %36 = load i32, i32* %13, align 4
  store i32 %36, i32* %6, align 4
  br label %37

37:                                               ; preds = %24, %21
  %38 = load i32, i32* %6, align 4
  ret i32 %38
}

declare dso_local i64 @pcie_valid_config(i32, i32) #1

declare dso_local i32 @PCI_SLOT(i32) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @orion_pcie_rd_conf(i32, %struct.pci_bus*, i32, i32, i32, i32*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
